--- a/my-next/package.json
+++ b/my-next/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.6.1",
+    "axios": "^0.19.0",
     "next": "9.1.3",
     "react": "16.11.0",
     "react-dom": "16.11.0"
