--- a/my-firebase/package.json
+++ b/my-firebase/package.json
@@ -12,11 +12,13 @@
     "@types/node": "^13.1.2",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
-    "axios": "^0.19.0",
+    "axios": "^0.19.2",
+    "babel-plugin-emotion": "^10.0.33",
     "firebase": "^7.6.0",
     "mobx": "^5.15.1",
     "mobx-react": "^6.1.4",
     "next": "^9.3.2",
+    "nvm": "^0.0.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "typescript": "^3.7.4"
